# filter-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: common.rs  discrete_bayes.rs  gh.rs  lib.rs  stats.rs
src/kalman/: kalman_filter.rs
