[package]
name = "kalmanfilt"
version = "0.2.2"
authors = ["Jacob Trueb <jtrueb@northwestern.edu", "Michael Mauderer <michael@michaelmauderer.com>"]
edition = "2021"
repository = "https://github.com/trueb2/kalmanfilt"
license = "MIT"
readme = "README.md"
description = "Kalman and other filters from Kalman-and-Bayesian-Filters-in-Python"

categories = ["algorithms", "science", "no-std"]
keywords = ["filters", "kalman", "signal-processing"]

[dependencies]
nalgebra = { version = "0.32.3", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.17", default-features = false, features = ["libm"]}

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["alloc"]
alloc = []
